force-app/main/default/objects/WorkdayUserSync_Settings__c/WorkdayUserSync_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings used in User Trigger for User sync from Workday</description>
    <label>WorkdayUserSync Settings</label>
</CustomObject>