force-app/main/default/objects/WorkdayUserSync_Settings__c/fields/Email_Encoding_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_Encoding_Key__c</fullName>
    <defaultValue>&quot;ISO-8859-1&quot;</defaultValue>
    <description>Email Encoding Key for the SFDC User</description>
    <inlineHelpText>Email Encoding Key for the SFDC User</inlineHelpText>
    <label>Email Encoding Key</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>