force-app/main/default/objects/WorkdayUserSync_Settings__c/fields/Generic_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Generic_Profile_Id__c</fullName>
    <description>Id of the generic profile which all new inactive users will be set with.
Use the Id of the profile &quot;NVInternalCRMGeneric&quot;</description>
    <inlineHelpText>Id of the generic profile which all new inactive users will be set with.
Use the Id of the profile &quot;NVInternalCRMGeneric&quot;</inlineHelpText>
    <label>Generic Profile Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>