force-app/main/default/objects/WorkdayUserSync_Settings__c/fields/Generic_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Generic_Profile_Name__c</fullName>
    <defaultValue>&quot;NVInternalCRMGeneric&quot;</defaultValue>
    <description>Profile Name : NVInternalCRMGeneric. Used in user trigger test class</description>
    <inlineHelpText>Profile Name : NVInternalCRMGeneric. Used in user trigger test class</inlineHelpText>
    <label>Generic Profile Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>