force-app/main/default/objects/WorkdayUserSync_Settings__c/fields/Generic_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Generic_Role_Id__c</fullName>
    <description>Id of the generic role which all new inactive users will be set with. 
Use the Id of the Role &quot;NVInternalCRMGeneric&quot;</description>
    <inlineHelpText>Id of the generic role which all new inactive users will be set with. 
Use the Id of the Role &quot;NVInternalCRMGeneric&quot;</inlineHelpText>
    <label>Generic Role Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>