force-app/main/default/objects/WorkdayUserSync_Settings__c/fields/Integration_Users__c.field-meta.xml
<CustomField>
    <fullName>Integration_Users__c</fullName>
    <description>Comma separate usernames. The trigger code will run only in case of the logged on user&apos;s username matches with this list. Its important to note that, the trigger code should run only in case from the WD &gt; PI &gt; Executes the Data Loader or the test classes which at times creates test users and the community user creation process should be skipped as it creates external users.</description>
    <inlineHelpText>Comma separate usernames. The trigger code will run only in case of the logged on user&apos;s username matches with this list.</inlineHelpText>
    <label>Integration_User(s)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>