force-app/main/default/objects/WorkdayUserSync_Settings__c/fields/Language_Locale_Key__c.field-meta.xml
<CustomField>
    <fullName>Language_Locale_Key__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>User&apos;s Local Language ISO key</description>
    <inlineHelpText>User&apos;s Local Language ISO key</inlineHelpText>
    <label>Language Locale Key</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>