force-app/main/default/objects/WorkdayUserSync_Settings__c/fields/Locale_Sid_Key__c.field-meta.xml
<CustomField>
    <fullName>Locale_Sid_Key__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>User Locale Sid Key.</description>
    <inlineHelpText>User Locale Sid Key.</inlineHelpText>
    <label>Locale Sid Key</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>