force-app/main/default/objects/WorkdayUserSync_Settings__c/fields/Sandbox_Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Instance_Name__c</fullName>
    <description>It will be used to create the username extension.
e.g., &quot;.sfdcstage1&quot;
For Prod Instance, keep it blank.</description>
    <inlineHelpText>It will be used to create the username extension.
e.g., &quot;.sfdcstage1&quot;
For Prod Instance, keep it blank.</inlineHelpText>
    <label>Sandbox Instance Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>