force-app/main/default/objects/WorkdayUserSync_Settings__c/fields/Time_Zone_Sid_Key__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Sid_Key__c</fullName>
    <defaultValue>&quot;America/Los_Angeles&quot;</defaultValue>
    <description>Default Time Zone Sid Key &quot;America/Los_Angeles&quot;</description>
    <inlineHelpText>Default Time Zone Sid Key &quot;America/Los_Angeles&quot;</inlineHelpText>
    <label>Time Zone Sid Key</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>